--- a/frontend/src/renderer/src/assets/tailwind.css
+++ b/frontend/src/renderer/src/assets/tailwind.css
@@ -1,3 +1,13 @@
 @import "tailwindcss/base";
 @import "tailwindcss/components";
 @import "tailwindcss/utilities";
+
+  /* Remove focus outline */
+  :global(svg:focus) {
+    outline: none !important;
+  }
+
+  /* Remove focus outline on buttons */
+  :global(button:focus) {
+    outline: none !important;
+  }
